--- a/NAV BAR/RRA NAV BAR/style.css
+++ b/NAV BAR/RRA NAV BAR/style.css
@@ -1,36 +1,58 @@
 *{
     margin: 0;
-    padding:0;
     box-sizing: border-box;
+    padding: 0;
 }
-.container{
-    height:100vh;
-    width:100%;
+nav{
+    width: 70%;
+    margin: 0 auto;
+    height: 40px;
+    background-color: #ccc;
+    text-align: left;
 }
-.nav{
-    height:7%;
-    width:80%;
-    margin: auto;
-    background-color: #3898d2;
-}
+
 ul{
-    list-style: none;
+    list-style-type: none;
 }
-.nav ul li{
-    float: left
+.province li{
+    float: left;
 }
-li a{
-    padding: 1.45em 2em;
-    display:flex;
-    justify-content: center;
-    margin-left:1em;
+
+ li{
+    width: 150px;
+    background-color: #ccc;
+    line-height: 40px;
+}
+li:hover{
+    background-color: #000;
+}
+
+a{
+    display: block;
     text-decoration: none;
-    color: white;
-    
+    padding: 0 5px;
+    color: #FFF;
 }
-li a:hover{
-    background: orange;
+
+.district li{
+    display: none;
+    position: relative;
 }
-li{
-    
+
+.province>li:hover .district li{
+    display: block;
+}
+.province li:hover .sector li{
+    display: none;
+}
+
+.district li:hover .sector{
+    display: block;
+    position: absolute;
+    left: 150px;
+    top: 0;
+}
+
+.district li:hover .sector li{
+    display: block;
 }
